Update gitignore to exclude idea files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Idea
+/.idea/
+/project/boot/
+/project/plugins/project
+target/
+lib_managed/
+src_managed/
+test-output/
+*.iml
+.classpath_nb
+
+# Java
 *.class
 
 # Mobile Tools for Java (J2ME)
